syntax = "proto3";

message UpdateId {
  uint32 new_id = 1;
}
